Tue Sep 10 18:18:26 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          In remove_all_msgs(pub_id), check to see if any queue elements
          belonging to that publication are on the delayed notification list.
          If so, remove them from the list and invoke the usual callback when
          doing the removal.

Mon Sep  9 15:39:08 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/idl/CPPTemplate.txt:

         Fixed fuzz errors.

Thu Sep  5 18:47:10 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/idl/CPPTemplate.txt:
          Added lock to take() with AbstractSample interface to keep data from double deleting it's member pointers

Wed Sep  4 02:20:35 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * java/dds/OpenDDS_DCPS_jni.cpp:

          Explicit includes.

Mon Sep  2 18:01:30 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * dds/DCPS/transport/framework/TransportReceiveStrategy_T.h:

          Explicit includes.

Fri Aug 30 18:51:39 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:
        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Added AbstractSamples interface and added an overloaded
          take() method to avoid potential read_generic(),
          take_generic() interface race conditions.

Thu Aug 29 21:41:50 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          Moved locking to callers of take_i and read_i
          instead of locking within read_i and take_i.

Mon Aug 19 10:26:32 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
